tests/semantic/invalid/variable_declared_never_defined.c
/*
 * Multi-line comment.
 */

extern int32_t a;